# Very-Simple-Resource-Dumper

./: .gitignore  .travis.yml  CMakeLists.txt  CmdLine.cpp  CmdLine.h  Dumper.cpp  Dumper.h  Main.cpp  Makefile  Makefile-clang  Makefile-gcc  Makefile-mingw  Makefile-msvc  Parser.cpp  Parser.h  README.md  dump.c  recurser.py  vsrd
test/: build_test.bat  build_test.sh  resources.crs  resources_README.crs  test.c  text.txt
